@@ -105,9 +105,6 @@ typedef enum {
 #define DB_HTTPTESTITEM	struct zbx_httptestitem_type
 #define DB_ESCALATION	struct zbx_escalation_type
 
-#define	HISTORY_STR_VALUE_LEN		255
-#define	HISTORY_STR_VALUE_LEN_MAX	HISTORY_STR_VALUE_LEN+1
-
 /* Trigger related defines */
 #define TRIGGER_DESCRIPTION_LEN		255
 #define TRIGGER_DESCRIPTION_LEN_MAX	TRIGGER_DESCRIPTION_LEN+1
@@ -175,6 +172,11 @@ typedef enum {
 #define HISTORY_STR_VALUE_LEN		255
 #define HISTORY_STR_VALUE_LEN_MAX	HISTORY_STR_VALUE_LEN+1
 
+#define	HISTORY_TEXT_VALUE_LEN		65535
+#define	HISTORY_TEXT_VALUE_LEN_MAX	HISTORY_TEXT_VALUE_LEN+1
+
+#define	HISTORY_LOG_VALUE_LEN		65535
+#define	HISTORY_LOG_VALUE_LEN_MAX	HISTORY_LOG_VALUE_LEN+1
 #define HISTORY_LOG_SOURCE_LEN		64
 #define HISTORY_LOG_SOURCE_LEN_MAX	HISTORY_LOG_SOURCE_LEN+1
 
